--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "dependencies": {
     "@aws-amplify/api": "^1.1.3",
     "@aws-amplify/pubsub": "^1.1.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.4.3",
+    "aws-amplify": "^1.2.3",
     "aws-amplify-react": "^2.4.4",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-animated-css": "^1.2.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
+    "react-parallax": "^2.2.4",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
@@ -43,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.10.0",
     "redux-devtools-extension": "^2.13.8"
   }
 }
