--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
+    "prettier": "^1.18.2",
     "redux-devtools-extension": "^2.13.8"
   }
 }
