--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.9.0",
     "react-animated-css": "^1.2.1",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
     "react-parallax": "^2.2.4",
     "react-redux": "^7.1.1",
