--- a/amplify/backend/auth/personalwebsitea5980a66/personalwebsitea5980a66-cloudformation-template.yml
+++ b/amplify/backend/auth/personalwebsitea5980a66/personalwebsitea5980a66-cloudformation-template.yml
@@ -124,7 +124,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'person4aaf66d9_sns-role', !Join ['',['person4aaf66d9_sns-role', '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'persona5980a66_sns-role', !Join ['',['persona5980a66_sns-role', '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -136,10 +136,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: person4aaf66d9_role_external_id
+                sts:ExternalId: persona5980a66_role_external_id
       Policies: 
         - 
-          PolicyName: person4aaf66d9-sns-policy
+          PolicyName: persona5980a66-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -195,7 +195,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: person4aaf66d9_role_external_id
+        ExternalId: persona5980a66_role_external_id
     
   
     
@@ -215,7 +215,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: person4aaf66d9_app_clientWeb
+      ClientName: persona5980a66_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -225,7 +225,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: person4aaf66d9_app_client
+      ClientName: persona5980a66_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -290,7 +290,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: person4aaf66d9_userpoolclient_lambda_iam_policy
+      PolicyName: persona5980a66_userpoolclient_lambda_iam_policy
       Roles: 
         - !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',[!Ref userpoolClientLambdaRole, '-', !Ref env]]]
       PolicyDocument:
@@ -307,7 +307,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: person4aaf66d9_userpoolclient_lambda_log_policy
+      PolicyName: persona5980a66_userpoolclient_lambda_log_policy
       Roles: 
         - !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',[!Ref userpoolClientLambdaRole, '-', !Ref env]]]
       PolicyDocument:
@@ -694,7 +694,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'personalwebsite4aaf66d9_identitypool_4aaf66d9', !Join ['',['personalwebsite4aaf66d9_identitypool_4aaf66d9', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'personalwebsitea5980a66_identitypool_a5980a66', !Join ['',['personalwebsitea5980a66_identitypool_a5980a66', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
