--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
-    "prettier": "^1.18.2",
+    "prettier": "1.18.2",
     "redux-devtools-extension": "^2.13.8"
   }
 }
